test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/storage_in_library_contract/src/storage_lib.sw
library storage_lib;

storage {
    foo: u64 = 0,
}

#[storage(write)]
pub fn update_library_storage() {
    storage.foo = 69;
}

#[storage(read)]
pub fn get_library_storage() -> u64 {
    storage.foo
}
