test/src/e2e_vm_tests/test_programs/should_fail/predicate_calls_impure/src/main.sw
predicate;

// In a script, there can be no impurity since storage is only available in contracts.
#[storage(read, write)]
fn main() -> bool {
  foo();
  false
}

#[storage(read,write)]
fn foo() {

}
